Closed Bug 1058099 Opened 10 years ago Closed 10 years ago

Intermittent OSX 10.8 leakcheck | 8880 bytes leaked (CacheStorageService, CondVar, Mutex, ReentrantMonitor, nsRunnable, ...)

Categories

(Core :: Networking: Cache, defect)

x86_64
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35
Tracking Status
firefox32 --- wontfix
firefox33 --- fixed
firefox34 --- fixed
firefox35 --- fixed
firefox-esr24 --- unaffected
firefox-esr31 --- unaffected
b2g-v2.0 --- fixed
b2g-v2.0M --- fixed
b2g-v2.1 --- fixed
b2g-v2.2 --- fixed

People

(Reporter: RyanVM, Assigned: sworkman)

Details

(Keywords: intermittent-failure, memory-leak)

Attachments

(1 file, 1 obsolete file)

https://tbpl.mozilla.org/php/getParsedLog.php?id=46634111&tree=Mozilla-Inbound

Rev5 MacOSX Mountain Lion 10.8 mozilla-inbound debug test mochitest-5 on 2014-08-23 11:59:30 PDT for push 870d25b5d7b3
slave: talos-mtnlion-r5-099

12:14:48     INFO -  nsTraceRefcnt::DumpStatistics: 1583 entries
12:14:48     INFO -  TEST-INFO | leakcheck | leaked 1 CacheStorageService (248 bytes)
12:14:48     INFO -  TEST-INFO | leakcheck | leaked 1 CondVar (40 bytes)
12:14:48     INFO -  TEST-INFO | leakcheck | leaked 3 Mutex (96 bytes)
12:14:48     INFO -  TEST-INFO | leakcheck | leaked 1 ReentrantMonitor (40 bytes)
12:14:48     INFO -  TEST-INFO | leakcheck | leaked 1 nsRunnable (24 bytes)
12:14:48     INFO -  TEST-INFO | leakcheck | leaked 1001 nsStringBuffer (8008 bytes)
12:14:48     INFO -  TEST-INFO | leakcheck | leaked 5 nsTArray_base (40 bytes)
12:14:48     INFO -  TEST-INFO | leakcheck | leaked 1 nsThread (240 bytes)
12:14:48     INFO -  TEST-INFO | leakcheck | leaked 1 nsTimerEvent (48 bytes)
12:14:48     INFO -  TEST-INFO | leakcheck | leaked 1 nsTimerImpl (96 bytes)
12:14:48  WARNING -  TEST-UNEXPECTED-FAIL | leakcheck | 8880 bytes leaked (CacheStorageService, CondVar, Mutex, ReentrantMonitor, nsRunnable, ...)
Steve, I see bug 1054572 in the regression range on inbound. Can you take a look?
Flags: needinfo?(sworkman)
Honza, this looks like mPurgeTimer is leaking at shutdown - what do you think? I added mPurgeTimer->Cancel() to ShutdownBackground(). That should work, right?
Attachment #8481721 - Flags: review?(honzab.moz)
Flags: needinfo?(sworkman)
Comment on attachment 8481721 [details] [diff] [review]
v1.0 Cancel CacheStorageService::mPurgeTimer if it's still set during shutdown

Review of attachment 8481721 [details] [diff] [review]:
-----------------------------------------------------------------

Yes, this is it!  Thanks Steve, fantastic hit.
Attachment #8481721 - Flags: review?(honzab.moz) → review+
https://hg.mozilla.org/mozilla-central/rev/9ed4c053e664
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Please request aurora, beta, and b2g32 approval on this when you get a chance. AFAICT, it affects 32+.
Flags: needinfo?(sworkman)
Updated commit line in the patch, ready for uplift pending approval.
Attachment #8481721 - Attachment is obsolete: true
Attachment #8484373 - Flags: review+
Flags: needinfo?(sworkman)
Comment on attachment 8484373 [details] [diff] [review]
v1.0 Cancel CacheStorageService::mPurgeTimer if it's still set during shutdown

Approval Request Comment
[Feature/regressing bug #]: 986179
[User impact if declined]: Minor leak on shutdown.
[Describe test coverage new/current, TBPL]: Fixes intermittent leak in automated testing; been on m-c for a few days.
[Risks and why]: None.
[String/UUID change made/needed]: None.

Not requesting approval-mozilla-b2g32 - "This flag is now for security issues only."
Attachment #8484373 - Flags: approval-mozilla-beta?
Attachment #8484373 - Flags: approval-mozilla-aurora?
Comment on attachment 8484373 [details] [diff] [review]
v1.0 Cancel CacheStorageService::mPurgeTimer if it's still set during shutdown

(In reply to Steve Workman [:sworkman] from comment #28)
> Not requesting approval-mozilla-b2g32 - "This flag is now for security
> issues only."

That's bogus copypasta from earlier flags.
Attachment #8484373 - Flags: approval-mozilla-b2g32?
Attachment #8484373 - Flags: approval-mozilla-b2g32? → approval-mozilla-b2g32+
(In reply to Ryan VanderMeulen [:RyanVM UTC-4] from comment #29)
> That's bogus copypasta from earlier flags.

Cool beans. Thanks for landing.
Comment on attachment 8484373 [details] [diff] [review]
v1.0 Cancel CacheStorageService::mPurgeTimer if it's still set during shutdown

Beta+
Aurora+
Attachment #8484373 - Flags: approval-mozilla-beta?
Attachment #8484373 - Flags: approval-mozilla-beta+
Attachment #8484373 - Flags: approval-mozilla-aurora?
Attachment #8484373 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: